--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                 
                     <p id="aboutMe">Soy ingenieria de sistemas de formación y apasionada por el front end.
                         Estoy trabajando en proyectos con React y Angular.
-                        En mi tiempo libre, disfruto de la lectura y caminar por el campo disfrutando de la naturaleza 
+                        En mi tiempo libre, disfruto de la lectura y caminar por el campo disfrutando de la naturaleza. 
                     </p>
                     <a class="buttonVer" href="#projects">
                         <button> Ver Proyectos</button>
@@ -61,10 +61,83 @@
 
         <!-- Habilidades -->
         <section id="skill">
-            <div class="skillBox">
-                <img class="img_skill" src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="Html5 icon">
-                <h3 class="title_skill">Html5</h3>
+            <h2 class="sectionTitle">            
+                <label class="spanSubTitle">Te comparto mis</label>
+                Habilidades
+            </h2>
+            <div class="containerSkill">
+
+                <div class="skillBox">
+                    <img class="img_skill" src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="Html5 icon">
+                    <h3 class="title_skill">Html5</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://cdn-icons-png.flaticon.com/512/732/732190.png" alt="Html5 icon">
+                    <h3 class="title_skill">CSS</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" alt="Html5 icon">
+                    <h3 class="title_skill">JavaScript</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://cdn-icons-png.flaticon.com/512/5968/5968672.png" alt="Html5 icon">
+                    <h3 class="title_skill">Bootstrap</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://cdn-icons-png.flaticon.com/512/1126/1126012.png" alt="Html5 icon">
+                    <h3 class="title_skill">React</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/250px-Angular_full_color_logo.svg.png" alt="Html5 icon">
+                    <h3 class="title_skill">Angular</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://cdn-icons-png.flaticon.com/512/5968/5968381.png" alt="Html5 icon">
+                    <h3 class="title_skill">TypeScript</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://cdn-icons-png.flaticon.com/512/226/226777.png" alt="Html5 icon">
+                    <h3 class="title_skill">Java</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://midu.dev/images/tags/node.png" alt="Html5 icon">
+                    <h3 class="title_skill">Node.js</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://w7.pngwing.com/pngs/545/451/png-transparent-node-js-express-js-javascript-solution-stack-web-application-others-angle-text-rectangle-thumbnail.png" alt="Html5 icon">
+                    <h3 class="title_skill">Express</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://d1.awsstatic.com/asset-repository/products/amazon-rds/1024px-MySQL.ff87215b43fd7292af172e2a5d9b844217262571.png" alt="Html5 icon">
+                    <h3 class="title_skill">MySql</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://raw.githubusercontent.com/docker-library/docs/01c12653951b2fe592c1f93a13b4e289ada0e3a1/postgres/logo.png" alt="Html5 icon">
+                    <h3 class="title_skill">PostgreSQL</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://1.bp.blogspot.com/-YIfQT6q8ZM4/Vzyq5z1B8HI/AAAAAAAAAAc/UmWSSMLKtKgtH7CACElUp12zXkrPK5UoACLcB/s1600/image00.png" alt="Html5 icon">
+                    <h3 class="title_skill">Firebase</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://cdn-icons-png.flaticon.com/128/2111/2111432.png" alt="Html5 icon">
+                    <h3 class="title_skill">github</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://git-scm.com/images/logos/downloads/Git-Logo-1788C.png" alt="Html5 icon">
+                    <h3 class="title_skill">Git</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://home.et.utwente.nl/slootenvanf/uidessim/figma/img/figma.svg" alt="Html5 icon">
+                    <h3 class="title_skill">Figma</h3>
+                </div>
+                <div class="skillBox">
+                    <img class="img_skill" src="https://assets.stickpng.com/images/62a79050e42d729d928b1756.png" alt="Html5 icon">
+                    <h3 class="title_skill">Visual Studio Code</h3>
+                </div>
+
             </div>
+           
         </section>
 
         <!-- proyectos -->
