agregando redes de contácto

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
                 <div class="card">
                     <img class="imgProjects" src="./images/chatOwl.png" alt="">                    
                         <h3>ChatOwl</h3>
-                        <label>App de chat en tiempo real</label> 
+                        <label>App de chat en tiempo real.</label> 
                         <div class="boxLinks">
                             <a class="links" href="https://github.com/elisabethfarfan/chat-owl-client">Proyecto</a>
                             <a class="links" href="chatowlapp.onrender.com/">Demo</a>
@@ -159,47 +159,46 @@
                 </div>  
                 <div class="card">
                     <img class="imgProjects" src="./images/burgerQueen.png" alt="">                    
-                        <h3>ChatOwl</h3>
-                        <label>App de chat en tiempo real</label> 
+                        <h3>coffee-dreams</h3>
+                        <label>App para tomar pedidos.</label> 
                         <div class="boxLinks">
-                            <a class="links" href="https://github.com/elisabethfarfan/chat-owl-client">Proyecto</a>
-                            <a class="links" href="chatowlapp.onrender.com/">Demo</a>
+                            <a class="links" href="coffee-dreams-pe.netlify.app/">Proyecto</a>
+                            <a class="links" href="https://github.com/elisabethfarfan/LIM018-burger-queen">Demo</a>
                         </div>  
                 </div> 
                 <div class="card">
                     <img class="imgProjects" src="./images/md-links.png" alt="">                    
-                        <h3>ChatOwl</h3>
-                        <label>App de chat en tiempo real</label> 
+                        <h3>MD-Links</h3>
+                        <label>Biblioteca para validar links</label> 
                         <div class="boxLinks">
-                            <a class="links" href="https://github.com/elisabethfarfan/chat-owl-client">Proyecto</a>
-                            <a class="links" href="chatowlapp.onrender.com/">Demo</a>
+                            <a class="links" href="https://github.com/elisabethfarfan/LIM018-md-links">Proyecto</a>                            
                         </div>  
                 </div> 
                 <div class="card">
                     <img class="imgProjects" src="./images/redSocial.png" alt="">                    
-                        <h3>ChatOwl</h3>
-                        <label>App de chat en tiempo real</label> 
+                        <h3>Pets</h3>
+                        <label>Red social de mascotas🐶🐷 </label> 
                         <div class="boxLinks">
-                            <a class="links" href="https://github.com/elisabethfarfan/chat-owl-client">Proyecto</a>
-                            <a class="links" href="chatowlapp.onrender.com/">Demo</a>
+                            <a class="links" href="https://github.com/elisabethfarfan/LIM018-social-network">Proyecto</a>
+                            <a class="links" href="https://elisabethfarfan.github.io/LIM018-social-network/src/">Demo</a>
                         </div>  
                 </div> 
                 <div class="card">
                     <img class="imgProjects" src="./images/giblhy.png" alt="">                    
-                        <h3>ChatOwl</h3>
-                        <label>App de chat en tiempo real</label> 
+                        <h3>GHIBLIFLEX </h3>
+                        <label>Buscador de films</label> 
                         <div class="boxLinks">
-                            <a class="links" href="https://github.com/elisabethfarfan/chat-owl-client">Proyecto</a>
-                            <a class="links" href="chatowlapp.onrender.com/">Demo</a>
+                            <a class="links" href="https://github.com/elisabethfarfan/LIM018-data-lovers">Proyecto</a>
+                            <a class="links" href="https://elisabethfarfan.github.io/LIM018-data-lovers/src/">Demo</a>
                         </div>  
                 </div> 
                 <div class="card">
                     <img class="imgProjects" src="./images/cipher.png" alt="">                    
-                        <h3>ChatOwl</h3>
-                        <label>App de chat en tiempo real</label> 
+                        <h3>CipherAmigas</h3>
+                        <label>App para cifrar mensajes</label> 
                         <div class="boxLinks">
-                            <a class="links" href="https://github.com/elisabethfarfan/chat-owl-client">Proyecto</a>
-                            <a class="links" href="chatowlapp.onrender.com/">Demo</a>
+                            <a class="links" href="https://github.com/elisabethfarfan/LIM018-cipher">Proyecto</a>
+                            <a class="links" href="https://elisabethfarfan.github.io/LIM018-cipher/src/index.html">Demo</a>
                         </div>  
                 </div> 
                             
@@ -208,12 +207,28 @@
 
         <!-- contact -->       
         <section id="contact">
-            <h3>Contáctame</h3>
-            <div>
-                <img src="">
-                <img src="">
-                <img src="">
-            </div>
+            <h2 class="sectionTitle">            
+               Contáctame
+            </h2>
+            <footer>            
+                <a href="https://www.linkedin.com/in/elisabethfarfandeveloper/">
+                    <img src="images/linkedin.png" alt="imagen de linkedin">
+                </a>
+                <a href="https://github.com/elisabethfarfan">
+                    <img src="images/github.png" alt="imagen de github">
+                </a>
+                <a href="https://github.com/elisabethfarfan">
+                    <img src="images/instagram.png" alt="imagen de instagram">
+                </a>
+                <a href=mailto:elisabethfarfan@gmail.com>
+                    <img src="images/envelope.png" alt="imagen de gmail">
+                </a>
+                <!-- <a href="#home">Inicio</a>
+                <a href="#aboutme">Sobre mi</a>
+                <a href="#projects">Proyectos</a>
+                <a href="#skill">Habilidades</a>
+                <a href="#contact">Contácto</a> -->
+            </footer>
         </section>
 
     </main>
