--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,17 @@
             <a href="https://github.com/elisabethfarfan">
                 <img src="images/instagram.png" alt="imagen de github">
             </a>
-            <!-- <a href="#home">Inicio</a>
-            <a href="#aboutme">Sobre mi</a>
-            <a href="#projects">Proyectos</a>
-            <a href="#skill">Habilidades</a>
-            <a href="#contact">Contácto</a> -->
+
+            <!-- <div class="navBurger">
+                <ul  class="ul"><a href="#home">Inicio</a></li>
+                    <li class="li"><a href="#aboutme">Sobre mi</a></li>
+                    <li class="li"><a href="#projects">Proyectos</a></li>
+                    <li class="li"><a href="#skill">Habilidades</a></li>
+                    <li class="li"><a href="#contact">Contácto</a></li>
+                </ul>
+            </div> -->
+            
+          
         </nav>
         <div class="burgerMenu">
             <img src="images/menu.png" alt="imagen de github">
@@ -154,7 +160,7 @@
                         <label>App de chat en tiempo real.</label> 
                         <div class="boxLinks">
                             <a class="links" href="https://github.com/elisabethfarfan/chat-owl-client">Proyecto</a>
-                            <a class="links" href="chatowlapp.onrender.com/">Demo</a>
+                            <a class="links" href="https://chatowlapp.onrender.com/">Demo</a>
                         </div>  
                 </div>  
                 <div class="card">
@@ -162,8 +168,8 @@
                         <h3>coffee-dreams</h3>
                         <label>App para tomar pedidos.</label> 
                         <div class="boxLinks">
-                            <a class="links" href="coffee-dreams-pe.netlify.app/">Proyecto</a>
-                            <a class="links" href="https://github.com/elisabethfarfan/LIM018-burger-queen">Demo</a>
+                            <a class="links" href="https://github.com/elisabethfarfan/LIM018-burger-queen">Proyecto</a>
+                            <a class="links" href="https://coffee-dreams-pe.netlify.app/">Demo</a>
                         </div>  
                 </div> 
                 <div class="card">
